<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/set_schedule">
    <CheckBoxPreference android:key="enabled"
        android:persistent="false"
        android:title="@string/enable_schedule"/>
    <Preference android:key="time"
        android:persistent="false"
        android:title="@string/time"/>
    <net.geniecode.ttr.RepeatPreference
        android:persistent="false"
        android:key="setRepeat"
        android:title="@string/schedule_repeat"/>
    <ListPreference android:key="setmode"
            android:title="@string/choose_mode"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"/>
    <CheckBoxPreference android:key="aponoff"
        android:persistent="false"
        android:title="@string/aponoff"
        android:summaryOn="@string/on"
        android:summaryOff="@string/off"/>
    <CheckBoxPreference android:key="silentonoff"
        android:persistent="false"
        android:title="@string/silentonoff"
        android:summaryOn="@string/on"
        android:summaryOff="@string/off"/>
</PreferenceScreen>
